--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
+/*=========================================
+        Generic
+===========================================*/
+
 * {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
 }
+
+/*=========================================
+        Header/Home
+===========================================*/
 .menu-bar {
     background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
     background-image: linear-gradient(to right, #6db9ef, #7ce08a);
@@ -20,4 +28,49 @@
     padding-right: 0;
     outline: none;
     border: none;
+}
+.banner {
+    height: 80vh;
+    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0,0,0,0.5)),to(rgba(0,0,0,0.5))), url(../img/banner-1.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../img/banner-1.jpg);
+    background-position: center;
+    background-size: cover;
+    color: #fff;
+    
+}
+.banner h1 {
+    padding-top: 170px;
+    font-size: 50px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 5px;
+    text-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+}
+.search-job {
+    padding: 30px 0;
+    margin: -50px 6% 50px;
+    background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+    background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+}
+.search-job .form-control {
+    max-width: 250px;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin: 10px 5px;
+    border-radius: 0;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: none !important;
+}
+.search-job .btn-primary {
+    border-radius: 0;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: none;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin: 5px;
+    padding: 5px 50px;
 }
