--- a/css/style.css
+++ b/css/style.css
@@ -15,29 +15,34 @@
     background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
     background-image: linear-gradient(to right, #6db9ef, #7ce08a);
 }
+
 .nav-link {
     font-size: 16px;
     color: #fff !important;
     margin: 2px;
     text-transform: uppercase;
 }
+
 .navbar-nav {
     text-align: right;
 }
+
 .menu-bar .navbar-toggler {
     padding-right: 0;
     outline: none;
     border: none;
 }
+
 .banner {
     height: 80vh;
-    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0,0,0,0.5)),to(rgba(0,0,0,0.5))), url(../img/banner-1.jpg);
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../img/banner-1.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../img/banner-1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/banner-1.jpg);
     background-position: center;
     background-size: cover;
     color: #fff;
-    
+
 }
+
 .banner h1 {
     padding-top: 170px;
     font-size: 50px;
@@ -46,12 +51,14 @@
     letter-spacing: 5px;
     text-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
+
 .search-job {
     padding: 30px 0;
     margin: -50px 6% 50px;
     background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
     background-image: linear-gradient(to right, #6db9ef, #7ce08a);
 }
+
 .search-job .form-control {
     max-width: 250px;
     display: -webkit-inline-box;
@@ -63,6 +70,7 @@
     box-shadow: none !important;
     border: none !important;
 }
+
 .search-job .btn-primary {
     border-radius: 0;
     -webkit-box-shadow: none !important;
@@ -73,4 +81,37 @@
     display: inline-flex;
     margin: 5px;
     padding: 5px 50px;
+}
+
+/*=========================================
+        Top Recruiters
+===========================================*/
+
+#recruiters {
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+#recruiters h3 {
+    text-align: center;
+    padding-bottom: 40px;
+    text-transform: uppercase;
+}
+
+h3::before {
+    content: '';
+    background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+    background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+    width: 50px;
+    height: 30px;
+    position: absolute;
+    z-index: -10;
+    margin-top: -15px;
+    border-top-left-radius: 70px;
+    border-bottom-right-radius: 90px;
+}
+
+#recruiters img {
+    max-width: 100px;
+    margin: 10px 20px;
 }
