--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,94 @@ h3::before {
     max-width: 100px;
     margin: 10px 20px;
 }
+
+
+/*=========================================
+        Jobs
+===========================================*/
+
+#jobs
+{
+    background: #f8f8fa;
+    padding: 50px 0;
+}
+.company-details
+{
+    -webkit-box-shadow: 0 2px 70px 0 rgba(110,130,208, .18);
+    box-shadow: 0 2px 70px 0 rgba(110,130,208, .18);
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.job-update
+{
+    background: #fff;
+    padding: 15px 25px;
+    border-radius: 5px;
+    
+}
+.job-update .fa
+{
+    margin-top: 5px;
+    margin-right: 10px;
+    color: #77d1b1;
+}
+.job-update small
+{
+    background: #efefef;
+    padding: 1px 5px;
+    margin: 0 5px;
+}
+.job-update p
+{
+    margin-bottom: 0 !important;
+}
+.job-update a
+{
+    text-decoration: none !important;
+    color: #b6bed2;
+    float: right;
+}
+.apply-btn
+{
+    height: 40px;
+    background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+    background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+    padding: 7px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    position: relative;
+
+    
+}
+.apply-btn .btn-primary
+{
+    padding: 0 30px;
+    float: right;
+    border-radius: 0;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    background: transparent;
+    border: 1px solid #fff;
+}
+.pagelink li
+{
+    height: 25px;
+    width: 25px;
+    list-style: none;
+    display: inline-block;
+    cursor: pointer;
+}
+.pagelink li:hover, .active
+{
+    color: #fff;
+    background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+    background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+}
+.left-arrow
+{
+    color: #999;
+}
+.right-arrow
+{
+    color: #29b929;
+}
