--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,27 @@ h3::before {
 {
     color: #29b929;
 }
+
+/*=========================================
+        Site Stats
+===========================================*/
+
+#site-stats {
+    padding: 100px 0;
+}
+#site-stats h3 {
+    margin-bottom: 30px;
+    text-transform: uppercase;
+}
+.stats-box {
+    padding: 30px;
+    border-radius: 10px;
+    margin: 20px 0;
+    -webkit-box-shadow: 0 2px 40px 0 rgba(110,130,208, .18);
+    box-shadow: 0 2px 40px 0 rgba(110,130,208, .18);
+}
+.stats-box .fa {
+    font-size: 30px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
