--- a/css/style.css
+++ b/css/style.css
@@ -230,3 +230,40 @@ h3::before {
     margin-right: 10px;
     margin-bottom: 10px;
 }
+
+/*=========================================
+        App Banner
+===========================================*/
+#app-banner {
+    background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+    background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+    padding: 50px 0;
+}
+#app-banner h1 {
+    margin-top: 20px;
+    color: #fff;
+}
+#app-banner img {
+    width: 150px;
+    margin: 50px 0;
+}
+
+/*=========================================
+        Footer
+===========================================*/
+#footer {
+    background: #f8f9fd;
+    padding: 20px 10px 8px;
+}
+#footer img {
+    margin: 30px 0;
+}
+#footer p {
+    color: #333;
+}
+#footer a img{
+    width: 50px;
+}
+#footer hr {
+    background-color: #ccc;
+}
