--- a/css/responsive.css
+++ b/css/responsive.css
@@ -37,7 +37,73 @@
 
 
 /* Medium Devices (Landscape Tablets & Medium Desktops) */
-@media(min-width: 992px) and (max-width: 1199px) {}
+@media(min-width: 992px) and (max-width: 1199px) {
+
+ /* Header/Home  */
+    
+    .banner {
+        height: 50vh;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../img/banner-1.jpg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/banner-1.jpg);
+        background-position: center;
+        background-size: cover;
+        color: #fff;
+
+    }
+    
+    .banner h1 {
+        padding-top: 260px;
+        font-size: 60px;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: 5px;
+        text-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    }
+    
+    .banner p {
+        font-size: 25px;
+    }
+
+    .search-job {
+        padding: 20px 0;
+        margin: -50px 6% 50px;
+        background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+        background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+    }
+    .search-job .form-control {
+        max-width: 200px;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        margin: 10px 5px;
+        border-radius: 0;
+        -webkit-box-shadow: none !important;
+        box-shadow: none !important;
+        border: none !important;
+    }
+    /* App Banner  */
+    
+    #app-banner {
+        background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+        background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+        padding: 40px 0;
+    }
+
+    #app-banner h1 {
+        margin-top: 20px;
+        color: #fff;
+        font-size: 30px;
+    }
+
+    #app-banner img {
+        width: 130px;
+        margin: 30px 0;
+    }
+
+
+
+
+}
 
 
 /* Small Devices (Portrait Tablets & Small Desktops) */
