--- a/css/responsive.css
+++ b/css/responsive.css
@@ -81,6 +81,8 @@
         box-shadow: none !important;
         border: none !important;
     }
+
+    
     /* App Banner  */
     
     #app-banner {
@@ -101,13 +103,76 @@
     }
 
 
-
-
 }
 
 
 /* Small Devices (Portrait Tablets & Small Desktops) */
-@media(min-width: 768px) and (max-width: 991px) {}
+@media(min-width: 768px) and (max-width: 991px) {
+
+/* Header/Home  */
+    
+    .banner {
+        height: 40vh;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../img/banner-1.jpg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/banner-1.jpg);
+        background-position: center;
+        background-size: cover;
+        color: #fff;
+
+    }
+    
+    .banner h1 {
+        padding-top: 200px;
+        font-size: 40px;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: 5px;
+        text-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    }
+    
+    .banner p {
+        font-size: 19px;
+    }
+
+    .search-job {
+        padding: 20px 0;
+        margin: -50px 6% 50px;
+        background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+        background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+    }
+    .search-job .form-control {
+        max-width: 150px;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        margin: 3px 3px;
+        border-radius: 0;
+        -webkit-box-shadow: none !important;
+        box-shadow: none !important;
+        border: none !important;
+    }
+    
+    /* App Banner  */
+    
+    #app-banner {
+        background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
+        background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+        padding: 40px 0;
+    }
+
+    #app-banner h1 {
+        margin-top: 10px;
+        color: #fff;
+        font-size: 25px;
+    }
+
+    #app-banner img {
+        width: 110px;
+        margin: 30px 0;
+    }
+
+
+}
 
 
 /* Extra Small Devices (Landscape Phone & Portrait Tablets) */
