--- a/css/style.css
+++ b/css/style.css
@@ -44,23 +44,27 @@
 }
 
 .banner h1 {
-    padding-top: 170px;
-    font-size: 50px;
+    padding-top: 140px;
+    font-size: 40px;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 5px;
     text-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
+.banner p {
+    font-size: 20px;
+}
+
 .search-job {
-    padding: 30px 0;
+    padding: 20px 0;
     margin: -50px 6% 50px;
     background-image: -webkit-gradient(linear, left top, right top, from(#6db9ef), to(#7ce08a));
     background-image: linear-gradient(to right, #6db9ef, #7ce08a);
 }
 
 .search-job .form-control {
-    max-width: 250px;
+    max-width: 280px;
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
