--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,8 @@
 }
 
 .banner h1 {
-    padding-top: 140px;
-    font-size: 40px;
+    padding-top: 160px;
+    font-size: 50px;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 5px;
@@ -267,6 +267,12 @@ h3::before {
 }
 #footer a img{
     width: 50px;
+    -webkit-transition: 1s;
+    transition: 1s;
+}
+#footer a img:hover {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
 }
 #footer hr {
     background-color: #ccc;
